--- a/index.html
+++ b/index.html
@@ -17,9 +17,28 @@
 <!-- font awasome link end -->
 </head>
 <body>
+    <header>
+        <div class="header-container">
+            <div class="top-manu">
+                <div class="logo">
+                    <h2 class="logos">Influencer products</h2>
+                </div>
+                <div class="manu">
+                    <a id="anchor" href="">Home</a>
+                    <a id="anchor" href="">Product</a>
+                    <a id="anchor" href="">Sing up</a>
+                    <a id="anchor" href="">Login</a>
+                    <a id="anchor" href=""><i class="fas fa-search"></i></a>
+                    <a id="anchor" href=""><i class="fas fa-shopping-cart"></i></a>
+                </div>
+            </div>
+        </div>
+    </header>
+<!-- Header manu---------------------
+---------------End------------------ -->
+<main>
     
-
-
+</main>
 
 </body>
 </html>
