--- a/index.html
+++ b/index.html
@@ -37,7 +37,24 @@
 <!-- Header manu---------------------
 ---------------End------------------ -->
 <main>
-    
+    <section class="top-sectio">
+        <div class="top-container">
+            <div class="top-button">
+                <h2 class="top-h2">Start your Journey as 
+                    Influencer</h2>
+                    <p class="top-peragraph">Get order updates, tips about the latest discounts, coupons and more! for mobile-only</p>
+                    <a class="button">Preebook now<i class="fas fa-arrow-right left"></i></a>
+            </div>
+            <div class="top-imgo">
+                   <div class="optima">
+                    <img class="circle" src="images/Circle design.svg" alt="">
+                   </div>
+                   <div class="camera">
+                    <img src="images/main-camera.png" alt="">
+                   </div>
+            </div>
+        </div>
+    </section>
 </main>
 
 </body>
