--- a/index.html
+++ b/index.html
@@ -55,7 +55,198 @@
             </div>
         </div>
     </section>
+    <!-- --------------------------------
+        top section End 
+--------------------- -------->
+<section class="to-section">
+    <div class="compani-logo">
+        <div class="logo-size">
+            <img class="compani-dites" src="logos/Alibaba.svg" alt="">
+            <img class="compani-dites" src="logos/Amazon.svg" alt="">
+            <img class="compani-dites" src="logos/Daraz.pk Logo.svg" alt="">
+            <img class="compani-dites" src="logos/Ebay.svg" alt="">
+            <img class="compani-dites" src="logos/Rakuten.svg" alt="">
+            <img class="compani-dites" src="logos/Target.svg" alt="">
+            <img class="compani-dites" src="logos/Walmart.svg" alt="">
+        </div>
+        </div>
+</section>
+<!--------------------------------------
+     compani logo section End
+------------------------------- -->
+<section class="product-section">
+<div class="bloge">
+    <h2 class="popular">Popular Collection</h2>
+    <div class="popular-calcoletion">
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/tripod.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Flex Tripod</h5>
+                    <p class="peragraph-p">$50.48</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/mic.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">microphone</h5>
+                    <p class="peragraph-p">$120.25</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/airpod.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Airbuds</h5>
+                    <p class="peragraph-p">$1000.0</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/drone.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Drone</h5>
+                    <p class="peragraph-p">$980.40</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/lights.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Light Setup</h5>
+                    <p class="peragraph-p">$1200.0</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/setup.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Photoshoot set</h5>
+                    <p class="peragraph-p">$820.40</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/camera.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Vlogging Camera</h5>
+                    <p class="peragraph-p">$1800.80</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/single-light.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Green Screen</h5>
+                    <p class="peragraph-p">$25.48</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="product-img">
+            <div class="product-info">
+                <img class="width-img" src="images/action.png" alt="">
+                <div class="product-name">
+                    <h5 class="product-head">Action Camera</h5>
+                    <p class="peragraph-p">$380.48</p>
+                    <div class="star">
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span><i class="fas fa-star"></i></span>
+                       <span>4.99</span>
+                       <h4 class="title-p">Wordwide shifting available Buyers protection possible!</h4>
+                    </div>
+                </div>
+            </div>
+        </div>
+</div>
+</div>
+</section>
+<div class="arrow">See More<i class="fas fa-arrow-right left"></i></div>
 </main>
-
+<!-- ---------------------------
+    product section End
+    --------------------------------- -->
 </body>
 </html>
