--- a/index.html
+++ b/index.html
@@ -240,42 +240,25 @@
                 </div>
             </div>
         </div>
+        <div class="arrow">See More<i class="fas fa-arrow-right left"></i></div>
 </div>
 </div>
 </section>
-<div class="arrow">See More<i class="fas fa-arrow-right left"></i></div>
-</main>
 <!-- ---------------------------
     product section End
     --------------------------------- -->
-
-    <!-- --------------------------------------------------------------
-        last section start
-    ----------------------------------------------- -->
-    <div class="animation-section">
-        <div class="content-area">
-            <div class="anim-ation">
-                <img src="images/camera.png" alt="">
-            </div>
-            <div class="half-width">
-                <h1 class="hedding">Featured products at one place</h1>
-                <p class="heding-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
-                <a href="" class="squar-button">Join Now<i class="fas fa-arrow-right left"></i></a>
-            </div>
-        </div>
-    </div>
-    <!-- --------------------------------
-        last section End
-        -------------------------------- -->
-    <footer>
-        <div class="footer-box">
-            <h2 class="footer-heddings">Influencer products</h2>
-            <p class="footer-copyright">Copyright © 2020  influencer products All rights reserved</p>
-            <a href=""><i class="fab fa-instagram suchal"></i></a>
-            <a href=""><i class="fab fa-twitter-square suchal"></i></a>
-            <a href=""><i class="fab fa-facebook-square suchal"></i></a>
-            <a href=""><i class="fab fa-youtube suchal"></i></a>
-        </div>
-    </footer>
+        <!-- --------------------------------
+            last section End           -------------------------------- -->
+</main>
+<footer>
+    <div class="footer-box">
+      <h2 class="footer-heddings">Influencer products</h2>
+      <p class="footer-copyright">Copyright © 2020  influencer products All rights reserved</p>
+      <a href=""><i class="fab fa-instagram suchal"></i></a>
+      <a href=""><i class="fab fa-twitter-square suchal"></i></a>
+      <a href=""><i class="fab fa-facebook-square suchal"></i></a>
+      <a href=""><i class="fab fa-youtube suchal"></i></a>
+  </div>
+</footer>
 </body>
 </html>
