--- a/index.html
+++ b/index.html
@@ -247,9 +247,24 @@
 <!-- ---------------------------
     product section End
     --------------------------------- -->
-        <!-- --------------------------------
-            last section End           -------------------------------- -->
+    <section class="animation-tabe">
+        <div class="animation-section">
+            <div class="content-area">
+                <div class="anim-ation">
+                    
+                </div>
+                <div class="half-width">
+                    <h1 class="hedding">Featured products at one place</h1>
+                    <p class="heding-p">Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud amet.</p>
+                    <a href="" class="squar-button">Join Now<i class="fas fa-arrow-right left"></i></a>
+                </div>
+            </div>
+        </div>
+      </section>
 </main>
+ <!-- --------------------------------
+    last section End
+    -------------------------------- -->
 <footer>
     <div class="footer-box">
       <h2 class="footer-heddings">Influencer products</h2>
