--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
         <div class="animation-section">
             <div class="content-area">
                 <div class="anim-ation">
-                    
+                <!-- animation start -->
                 </div>
                 <div class="half-width">
                     <h1 class="hedding">Featured products at one place</h1>
